WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148059
REGRESSION: Playing audio causes near-instant crash
https://bugs.webkit.org/show_bug.cgi?id=148059
Summary
REGRESSION: Playing audio causes near-instant crash
Dustin Paluch
Reported
2015-08-15 11:26:33 PDT
OSX 10.9.5 Webkit Version 7.1.8 (9537.85.17.9.1,
r188509
) Tested on these sources: 1.
https://www.youtube.com/watch?v=rgQdeni5M-Q
2.
http://www-mmsp.ece.mcgill.ca/documents/AudioFormats/WAVE/Samples/AFsp/M1F1-Alaw-AFsp.wav
3.
https://en.wikipedia.org/wiki/File:10,000_Maniacs_Because_The_Night.ogg
Attempting to play any of these sources causes a nearly instant crash. Here is the backtrace from the first example:
http://pastebin.com/raw.php?i=77kKCQ43
Attachments
Patch
(10.21 KB, patch)
2015-08-18 15:05 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2015-08-15 14:21:49 PDT
rdar://problem/22282680
Alexey Proskuryakov
Comment 2
2015-08-16 11:10:06 PDT
***
Bug 148066
has been marked as a duplicate of this bug. ***
Anders Carlsson
Comment 3
2015-08-18 15:05:31 PDT
Created
attachment 259303
[details]
Patch
Anders Carlsson
Comment 4
2015-08-18 15:18:52 PDT
Committed
r188602
: <
http://trac.webkit.org/changeset/188602
>
Dustin Paluch
Comment 5
2015-08-19 06:27:21 PDT
(In reply to
comment #4
)
> Committed
r188602
: <
http://trac.webkit.org/changeset/188602
>
Working correctly in
r188633
. Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug