REGRESSION: Playing audio causes near-instant crash https://bugs.webkit.org/show_bug.cgi?id=148059 rdar://problem/22282680

Reviewed by Sam Weinig.

The version of WebKit that Safari 6.2.8, 7.1.8 and 8.0.8 built against
had an ABI incompatible WKPageUIClientV4 struct. Thankfully we're not going to ship any
versions of Safari that use the "normal" WKPageUIClientV4 struct so just assume that it's always the
broken one and fix it up by converting it to a WKPageUIClientV5 struct and setting that as the page UI client.

* UIProcess/API/C/WKPage.cpp:
(fixUpBotchedPageUIClient):
(WKPageSetPageUIClient):

Canonical link: https://commits.webkit.org/166260@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188602 268f45cc-cd09-0410-ab3c-d52691b4dbfc